Refactor code structure and clean up

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,8 @@ __pycache__
 img/
 image/
 demos/
-core/Link copy.py
-core/Write copy.py
+core/Link_copy.py
+core/Write_copy.py
 
 
 # README exports
